--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -297,24 +297,14 @@
     <Compile Include="ucrDataSelection.vb">
       <SubType>UserControl</SubType>
     </Compile>
-    <Compile Include="ucrReceiver.designer.vb">
-      <DependentUpon>ucrReceiver.vb</DependentUpon>
-    </Compile>
-    <Compile Include="ucrReceiver.vb">
-      <SubType>UserControl</SubType>
-    </Compile>
     <Compile Include="ucrReceiverMultiple.designer.vb">
       <DependentUpon>ucrReceiverMultiple.vb</DependentUpon>
     </Compile>
-    <Compile Include="ucrReceiverMultiple.vb">
-      <SubType>UserControl</SubType>
-    </Compile>
+    <Compile Include="ucrReceiverMultiple.vb" />
     <Compile Include="ucrReceiverSingle.designer.vb">
       <DependentUpon>ucrReceiverSingle.vb</DependentUpon>
     </Compile>
-    <Compile Include="ucrReceiverSingle.vb">
-      <SubType>UserControl</SubType>
-    </Compile>
+    <Compile Include="ucrReceiverSingle.vb" />
     <Compile Include="ucrSelector.designer.vb">
       <DependentUpon>ucrSelector.vb</DependentUpon>
     </Compile>
@@ -516,15 +506,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="ucrDataSelection.sw-KE.resx">
       <DependentUpon>ucrDataSelection.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ucrReceiver.fr-FR.resx">
-      <DependentUpon>ucrReceiver.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ucrReceiver.resx">
-      <DependentUpon>ucrReceiver.vb</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="ucrReceiver.sw-KE.resx">
-      <DependentUpon>ucrReceiver.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ucrReceiverMultiple.fr-FR.resx">
       <DependentUpon>ucrReceiverMultiple.vb</DependentUpon>
