--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -159,6 +159,12 @@
     <Compile Include="dlgDisplayDaily.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgDotPlot.designer.vb">
+      <DependentUpon>dlgDotPlot.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgDotPlot.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgEndofRains.designer.vb">
       <DependentUpon>dlgEndofRains.vb</DependentUpon>
     </Compile>
@@ -193,6 +199,12 @@
       <DependentUpon>dlgPlot.vb</DependentUpon>
     </Compile>
     <Compile Include="dlgPlot.vb">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="dlgProbabilityPlot.designer.vb">
+      <DependentUpon>dlgProbabilityPlot.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgProbabilityPlot.vb">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="dlgRegularSequence.designer.vb">
@@ -353,6 +365,15 @@
     <EmbeddedResource Include="dlgDescriptiveStatistics.sw-KE.resx">
       <DependentUpon>dlgDescriptiveStatistics.vb</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="dlgDotPlot.fr-FR.resx">
+      <DependentUpon>dlgDotPlot.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgDotPlot.resx">
+      <DependentUpon>dlgDotPlot.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgDotPlot.sw-KE.resx">
+      <DependentUpon>dlgDotPlot.vb</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="dlgEndofRains.fr-FR.resx">
       <DependentUpon>dlgEndofRains.vb</DependentUpon>
     </EmbeddedResource>
@@ -406,6 +427,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgPlot.sw-KE.resx">
       <DependentUpon>dlgPlot.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgProbabilityPlot.fr-FR.resx">
+      <DependentUpon>dlgProbabilityPlot.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgProbabilityPlot.resx">
+      <DependentUpon>dlgProbabilityPlot.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgProbabilityPlot.sw-KE.resx">
+      <DependentUpon>dlgProbabilityPlot.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgRegularSequence.fr-FR.resx">
       <DependentUpon>dlgRegularSequence.vb</DependentUpon>
