--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -357,6 +357,12 @@
     <Compile Include="frmScript.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmVariables.designer.vb">
+      <DependentUpon>frmVariables.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmVariables.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -724,6 +730,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmScript.sw-KE.resx">
       <DependentUpon>frmScript.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmVariables.fr-FR.resx">
+      <DependentUpon>frmVariables.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmVariables.resx">
+      <DependentUpon>frmVariables.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmVariables.sw-KE.resx">
+      <DependentUpon>frmVariables.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.fr-FR.resx" />
     <EmbeddedResource Include="My Project\Resources.resx">
