Created three summaries dialog and added the menu entry for it.

--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -297,6 +297,12 @@
     <Compile Include="dlgStemAndLeaf.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgThreeSummaries.Designer.vb">
+      <DependentUpon>dlgThreeSummaries.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgThreeSummaries.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgTimeseriesPlot.designer.vb">
       <DependentUpon>dlgTimeseriesPlot.vb</DependentUpon>
     </Compile>
