--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -201,6 +201,12 @@
     <Compile Include="dlgCPTtoTabularData.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgCreateClimateObject.designer.vb">
+      <DependentUpon>dlgCreateClimateObject.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgCreateClimateObject.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgCumulativeExceedance.designer.vb">
       <DependentUpon>dlgCumulativeExceedance.vb</DependentUpon>
     </Compile>
@@ -556,6 +562,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgCPTtoTabularData.sw-KE.resx">
       <DependentUpon>dlgCPTtoTabularData.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgCreateClimateObject.fr-FR.resx">
+      <DependentUpon>dlgCreateClimateObject.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgCreateClimateObject.resx">
+      <DependentUpon>dlgCreateClimateObject.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgCreateClimateObject.sw-KE.resx">
+      <DependentUpon>dlgCreateClimateObject.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgCumulativeExceedance.fr-FR.resx">
       <DependentUpon>dlgCumulativeExceedance.vb</DependentUpon>
