--- a/instat/instat.vbproj
+++ b/instat/instat.vbproj
@@ -243,6 +243,12 @@
     <Compile Include="dlgDisplayDoyofYear.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="dlgDisplayRainRunningTotal.designer.vb">
+      <DependentUpon>dlgDisplayRainRunningTotal.vb</DependentUpon>
+    </Compile>
+    <Compile Include="dlgDisplayRainRunningTotal.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="dlgDotPlot.designer.vb">
       <DependentUpon>dlgDotPlot.vb</DependentUpon>
     </Compile>
@@ -643,6 +649,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="dlgDisplayDoyofYear.sw-KE.resx">
       <DependentUpon>dlgDisplayDoyofYear.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgDisplayRainRunningTotal.fr-FR.resx">
+      <DependentUpon>dlgDisplayRainRunningTotal.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgDisplayRainRunningTotal.resx">
+      <DependentUpon>dlgDisplayRainRunningTotal.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="dlgDisplayRainRunningTotal.sw-KE.resx">
+      <DependentUpon>dlgDisplayRainRunningTotal.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="dlgDotPlot.fr-FR.resx">
       <DependentUpon>dlgDotPlot.vb</DependentUpon>
